Fix overlapping items in directory permission checks in installation wizard (#3476)
* Fix overlapping itens in directory permission checks in installation wizard

Issue #3449.

* Update CHANGELOG with issue #3449

Also, use "overflow-y: auto" instead of "overflow: hidden", which gets the job done (fixes height being 0 when element only contains floated elements), but is safer (won't hide things).

--- a/include/themes/classic/main.css
+++ b/include/themes/classic/main.css
@@ -1245,20 +1245,18 @@ legend {
 }
 
 .formRow {
-	display: table-row;
 	width: 100%;
 	line-height: 30px;
+	overflow-y: auto;
 }
 
 .formColumn {
 	float: left;
-	display: table-column;
 	text-align: left;
 }
 
 .formColumnLeft {
 	float: left;
-	display: table-column;
 	padding-left: 4px;
 	width: 45%;
 	text-align: left;
@@ -1266,7 +1264,6 @@ legend {
 
 .formColumnRight {
 	float: left;
-	display: table-column;
 	width: 45%;
 	text-align: left;
 }
